--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.61MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.87MB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
-  - {name: 🇨🇳 中国-271.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.00MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 捷克-1.06MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.52MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.63MB/s(Youtube:不良林), server: 5.183.176.84, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-338.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-306.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.92MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1021.1KB/s(Youtube:不良林), server: 5.183.176.80, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-416.5KB/s(Youtube:不良林), server: 5.183.176.94, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-738.7KB/s(Youtube:不良林), server: 5.183.176.81, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1009.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 捷克-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 捷克-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 捷克-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 捷克-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 捷克-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 捷克-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 捷克-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
