--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.63MB/s(Youtube:不良林), server: 5.183.176.84, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-338.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.92MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-940.1KB/s(Youtube:不良林), server: 89.31.126.147, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.12MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-4.34MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1021.1KB/s(Youtube:不良林), server: 5.183.176.80, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-416.5KB/s(Youtube:不良林), server: 5.183.176.94, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-338.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
