--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-940.1KB/s(Youtube:不良林), server: 89.31.126.147, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.12MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-4.34MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1021.1KB/s(Youtube:不良林), server: 5.183.176.80, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-4.03MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.61MB/s(Youtube:不良林), server: 5.183.176.80, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-305.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-416.5KB/s(Youtube:不良林), server: 5.183.176.94, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-738.7KB/s(Youtube:不良林), server: 5.183.176.81, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1009.3KB/s(Youtube:不良林), server: 5.183.176.94, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-360.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-605.7KB/s(Youtube:不良林), server: 5.183.176.93, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-605.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-605.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-605.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-605.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-605.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-605.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-940.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1021.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-416.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-738.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-1009.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-605.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
