--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇯🇵 日本-311.3KB/s(Youtube:不良林), server: 5.183.176.93, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-353.8KB/s(Youtube:不良林), server: 5.183.176.84, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-1.83MB/s(Youtube:不良林), server: 217.30.10.66, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇯🇵 日本-777.7KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-357.7KB/s(Youtube:不良林), server: 5.183.176.93, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-262.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-6.33MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-387.3KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-490.2KB/s(Youtube:不良林), server: 5.183.176.96, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-538.5KB/s(Youtube:不良林), server: 5.183.176.93, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-503.2KB/s(Youtube:不良林), server: 5.183.176.91, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-311.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-353.8KB/s(Youtube:不良林)
-      - 波兰-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-777.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-357.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.33MB/s(Youtube:不良林)
+      - 🇯🇵 日本-387.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-490.2KB/s(Youtube:不良林)
       - 🇯🇵 日本-538.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-503.2KB/s(Youtube:不良林)
